--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,21 @@ body {
 	background-color: #EFE0E0;
 }
 
+html, body {
+  height: 100%;
+  margin: 0;
+}
+.wrapper {
+  min-height: 100%;
+  margin-bottom: -20px;
+}
+.footer,
+.push {
+  height: 20px;
+}
+
+
+
 header {
 	width: 100%;
 	display: flex;
@@ -146,3 +161,6 @@ a, a:hover, a:active, button, button:focus, button:active {
 	}
 }
 
+footer {
+	background-color: #886464;
+}
