--- a/src/styles.css
+++ b/src/styles.css
@@ -1,110 +1,166 @@
-* {
-  margin: 0px;
-  padding: 0px;
+*{
+	margin: 0px;
+	padding: 0px;
+	font-family: 'Rasa', serif;
 }
 
-header{
-  width: 100%;
-  height: 50px;
-  overflow:auto;
-  background-color: #836E6E;
+body {
+	background-color: #EFE0E0;
 }
 
-.header__wrapper { 
-  display: inline-flex;
-  flex-flow: row wrap;
-  justify-content: flex-start;
-  align-items: center;
-  font-size: 40px;
+html, body {
+  height: 100%;
+  margin: 0;
+}
+.wrapper {
+  min-height: 100%;
+  margin-bottom: -20px;
+}
+.footer,
+.push {
+  height: 20px;
+}
+
+
+
+header {
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	overflow:auto;
+	background-color: #886464;
+	height: 50px;
+}
+
+a, a:hover, a:active, button, button:focus, button:active { 
+	outline: none !important
 }
 
 .header-item {
- margin-right: 25px;
-height: 25px;
+	height: 30px;
+	margin-left: 10px;
+	margin-top: 5px;
+	font-size: 16px;
 }
 
-.button-search {
-width: 15vw;
+@media(max-width: 500px) {
+	header {
+	height: 90px;
+	flex-direction: column;
+	align-items: flex-start;
+	}	
+
+	.header-item:last-child {
+		margin-bottom: 15px;
+	}
 }
 
-
-@media(max-width: 640px) {
-  .header__wrapper {
-    flex-flow: column nowrap;
-    justify-content: space-around;
-     align-items: flex-start;
-  }
-  .button-search {
-    width: 40vw;
-  }
-}
-
-main {
-  background-color: #F8F8F8;
-}
-
-.news {
-  width: 90%;
-  margin: 0 auto;
-  display: flex;
-  flex-flow: row wrap;
- 
-}
-
-.news__news-card {
-  width: 30%;
-  margin: 1%;
-  background-color: #F6F2E9;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    border-radius: 10px;
-}
-
-.card-item {
-  width: 100%;
-}
-
-.card-header {
-  text-align: center;
-  padding: 7px;
-}
-
-.card-desrription { 
-  padding: 7px;
-} 
-
-.card-read-more {
-  height: 30px;
-  padding: 10px;
-  width: 80%;
-      display: block;
-  margin: 0 auto;
-  margin-bottom: 5px;
-}
-
-@media(max-width: 640px) {
-  .news {
-    flex-flow: column nowrap;
-  }
-
-  .news__news-card {
-    width: 100%;
-  }
-}
-
-.load-more {
-    display: block;
-    margin: 0 auto;
-    padding: 10px 20px;
-    margin-bottom: 30px;
-    width: 20vw;
-    font-size: 15pxs;
+.search-text {
+	height: 27px;
 }
 
 .buttonColor {
-  background-color: #EAE2DB;
+	background-color: white;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	border-radius: 6px;
 }
 
 .buttonColor:hover {
-    background-color: #DFC2A8;
-    font-size: 16px;
+	background-color: #F8EAEA;
+	transform: scale(1.05, 1.05);
+	font-size: 17px;
+}
+
+
+.button-search {
+	width: 120px;
+}
+
+.load-more{
+	display: block;
+	margin: 0 auto;
+	padding: 10px 20px;
+	margin-top: 30px;
+	margin-bottom: 30px;
+	width: 17vw;
+	font-size: 16px;
+}
+
+.news {
+	width: 95%;
+	margin: 0 auto;
+	display: flex;
+	justify-content: space-between;
+	flex-flow: row wrap;
+}
+
+.news__news-card {
+	width: 17%;
+	margin: 0.5%;
+	padding: 5px;
+	background-color: #F6F2E9;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	border-radius: 10px;
+}
+
+.card-item {
+	width: 100%;
+}
+
+.card-header {
+	text-align: center;
+	font-size: 20px;
+}
+
+.card-desrription { 
+	padding: 7px;
+	font-size: 17px;
+} 
+
+.card-read-more {
+	height: 30px;
+	padding: 10px;
+	width: 80%;
+	color: #372020;
+	font-size: 20px;
+	display: block;
+	margin: 0 auto;
+}
+
+@media(max-width: 980px) {
+	.news {
+		align-items: center;
+		flex-flow: column nowrap;
+	}
+
+	.news__news-card {
+		width: 90%;
+		margin-bottom: 15px;
+	}
+
+	.card-header {
+		text-align: center;
+		font-size: 30px;
+	}
+
+	.card-desrription { 
+		padding: 7px;
+		font-size: 25px;
+	} 
+
+	.card-read-more {
+		width: 40%;
+		margin-bottom: 10px;
+		font-size: 25px;
+	}
+
+	.load-more{
+		width: 40vw;
+		font-size: 18px;
+	}
+}
+
+footer {
+	background-color: #886464;
 }
